tests/negative/neg_pr118b1_send_contract.safe
-- Test: neg_pr118b1_send_contract
-- Description: Send-like operations must stay within the task sends contract.
-- Expected: REJECT

package neg_pr118b1_send_contract

   subtype message is integer (0 to 10)

   channel data_ch : message capacity 1
   channel allowed_ch : message capacity 1

   task worker with priority = 10, sends allowed_ch
      sent : boolean = false

      loop
         send data_ch, 1, sent
